@@ -6,15 +6,30 @@
  */
 package com.tangosol.net;
 
+import com.oracle.coherence.common.base.Blocking;
+import com.oracle.coherence.common.base.Exceptions;
 import com.oracle.coherence.common.base.Logger;
 
+import com.oracle.coherence.common.base.Timeout;
+import com.oracle.coherence.common.net.SSLSettings;
+import com.oracle.coherence.common.net.SocketProvider;
+import com.oracle.coherence.common.util.Duration;
+import com.tangosol.coherence.config.Config;
 import com.tangosol.util.Resources;
 
+import javax.net.ssl.SSLContext;
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.util.concurrent.TimeUnit;
 
 /**
  * A {@link MemberIdentityProvider} that retrieves identity
@@ -56,21 +71,35 @@ public class URLMemberIdentityProvider
         return load("site", PROP_SITE);
         }
 
+    @Override
+    public void setDependencies(ClusterDependencies deps)
+        {
+        m_dependencies = deps;
+        }
+
     // ----- helper methods -------------------------------------------------
 
     String load(String sName, String sProperty)
         {
-        String sValue = System.getProperty(sProperty);
+        String sValue = Config.getProperty(sProperty);
         if (sValue != null && !sValue.isBlank())
             {
             try
                 {
+                URI    uri     = URI.create(sValue);
+                String sScheme = uri.getScheme();
+                if ("http".equalsIgnoreCase(sScheme) || "https".equalsIgnoreCase(sScheme))
+                    {
+                    // do http request
+                    return doHttpRequest(uri);
+                    }
+
                 URL url;
                 try
                     {
-                    url = new URL(sValue);
+                    url = uri.toURL();
                     }
-                catch (MalformedURLException e)
+                catch (Exception e)
                     {
                     // try as a resource
                     url = Resources.findFileOrResource(sValue, null);
@@ -100,6 +129,78 @@ public class URLMemberIdentityProvider
         return null;
         }
 
+    protected String doHttpRequest(URI uri) throws IOException
+        {
+        Duration                         timeout  = Config.getDuration(PROP_RETRY_TIMEOUT, DURATION_RETRY_TIMEOUT);
+        Duration                         period   = Config.getDuration(PROP_RETRY_PERIOD, DURATION_RETRY_PERIOD);
+        long                             cMillis  = period.as(Duration.Magnitude.MILLI);
+        HttpRequest                      request  = HttpRequest.newBuilder(uri).GET().build();
+        HttpResponse.BodyHandler<String> handler  = HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8);
+        HttpClient                       client   = ensureClient();
+
+        try (Timeout ignored = Timeout.after(timeout.as(Duration.Magnitude.MILLI), TimeUnit.MILLISECONDS))
+            {
+            HttpResponse<String> response = client.send(request, handler);
+            int                  nStatus  = response.statusCode();
+
+            if (nStatus != 200)
+                {
+                Logger.info("Received " + nStatus + " response from " + uri + " - retry every " + period + " for " + timeout);
+
+                while(nStatus != 200)
+                    {
+                    Blocking.sleep(cMillis);
+                    response = client.send(request, handler);
+                    nStatus  = response.statusCode();
+                    }
+                }
+
+            return response.body();
+            }
+        catch (InterruptedException e)
+            {
+            throw Exceptions.ensureRuntimeException(e, "timeout while making request to " + uri);
+            }
+        }
+
+    protected HttpClient ensureClient()
+        {
+        if (m_client == null)
+            {
+            synchronized (this)
+                {
+                if (m_client == null)
+                    {
+                    HttpClient.Builder builder = HttpClient.newBuilder();
+
+                    if (m_dependencies != null)
+                        {
+                        String             sProvider = Config.getProperty(PROP_SOCKET_PROVIDER);
+                        if (sProvider != null)
+                            {
+                            SocketProviderFactory factory     = m_dependencies.getSocketProviderFactory();
+                            SocketProvider        provider    = factory.getSocketProvider(sProvider);
+                            SSLSettings           sslSettings = factory.getSSLSettings(provider);
+                            SSLContext            sslContext  = sslSettings == null ? null : sslSettings.getSSLContext();
+                            if (sslContext != null)
+                                {
+                                builder.sslContext(sslContext);
+                                builder.sslParameters(sslContext.getSupportedSSLParameters());
+                                }
+                            }
+                        }
+
+                    Duration timeout = Config.getDuration(PROP_HTTP_TIMEOUT, DURATION_HTTP_TIMEOUT);
+
+                    m_client = builder.followRedirects(HttpClient.Redirect.ALWAYS)
+                            .connectTimeout(timeout.asJavaDuration())
+                            .build();
+                    }
+                }
+            }
+        return m_client;
+        }
+
     // ----- constants ------------------------------------------------------
 
     /**
@@ -126,4 +227,49 @@ public class URLMemberIdentityProvider
      * The system property to use to set the URL to read the role name from.
      */
     public static final String PROP_ROLE = "coherence.role.url";
+
+    /**
+     * The system property to use to set the URL to read the role name from.
+     */
+    public static final String PROP_SOCKET_PROVIDER = "coherence.url.identity.socket.provider";
+
+    /**
+     * The system property to use to set the retry period.
+     */
+    public static final String PROP_RETRY_PERIOD = "coherence.url.identity.retry.period";
+
+    /**
+     * The default retry period.
+     */
+    public static final Duration DURATION_RETRY_PERIOD = new Duration(1, Duration.Magnitude.SECOND);
+
+    /**
+     * The system property to use to set the retry timeout.
+     */
+    public static final String PROP_RETRY_TIMEOUT = "coherence.url.identity.retry.timeout";
+
+    /**
+     * The default retry timeout.
+     */
+    public static final Duration DURATION_RETRY_TIMEOUT =  new Duration(5, Duration.Magnitude.MINUTE);
+
+    /**
+     * The system property to use to set the http connection timeout.
+     */
+    public static final String PROP_HTTP_TIMEOUT = "coherence.url.identity.http.timeout";
+
+    /**
+     * The default http connection timeout.
+     */
+    public static final Duration DURATION_HTTP_TIMEOUT =  new Duration(1, Duration.Magnitude.MINUTE);
+
+    /**
+     * The cluster dependencies.
+     */
+    protected ClusterDependencies m_dependencies;
+
+    /**
+     * The http client used to access http or https URLs.
+     */
+    protected volatile HttpClient m_client;
     }
